Fix broken images on small devices

--- a/_sass/_homeofficeabisz.scss
+++ b/_sass/_homeofficeabisz.scss
@@ -8,7 +8,7 @@
     margin-left: 0;
     margin-right: 0;
     text-align: center; /* ensure alt text of image is centered too */
-    width: auto;
+    width: 100%;
   }
 }
 
